--- a/task0001(7)/Myblog/css/index.css
+++ b/task0001(7)/Myblog/css/index.css
@@ -2,7 +2,7 @@
     /*先设置banner 这个div的大小width和height*/
     width: 100%;
     height: 450px;
-    background-image: url("img/banner-bg.jpg");
+    background-image: url("../img/banner-bg.jpg");
     /*在设置图片的大小*/
     background-size: 100% 450px;
 }
