--- a/task0001(7)/Myblog/css/style.css
+++ b/task0001(7)/Myblog/css/style.css
@@ -6,6 +6,11 @@
 body{
     background-color:#e6e6e6;
 }
+a {
+    color: #fff;
+    text-decoration: none;
+}
+
 header{
     width: 100%;
     height: 80px;
@@ -50,6 +55,7 @@ header img{
     font-size: 12px;
     background: #000;
     color: white;
+    clear: both;/*!!!!!!!!!!非常重要*/
 }
 .footer nav{
     width: 980px;
